use grid to lock alignment on success stories - .contents grid sets tidy columns, and aligns child items to the end of the block - .quote is fixed to full height and uses rows of 1fr to set height of child blocks smartly - .quote > :first-child sets the classless first child of .quote to align at the start of the grid instead of the end, so the extra whitespace is after the quotation and before the name

--- a/src/components/HomeContainer/SuccessStories/SuccessStories.module.css
+++ b/src/components/HomeContainer/SuccessStories/SuccessStories.module.css
@@ -81,13 +81,22 @@
   }
 
   .contents {
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: end;
     gap: 30px;
     max-width: 1148px;
+    margin-inline: auto;
   }
 
   .quote {
-    width: calc(100% / 3);
+    display: grid;
+    grid-template-rows: 1fr;
+    height: 100%;
+  }
+
+  .quote > :first-child {
+    align-self: start;
   }
 
   .heading {
